feat(aisd-lab): lab6 udpate