@@ -16,19 +16,37 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
         this.root = null;
     }
 
-    /** Usuwa wszystkie elementy. */
     public void clear() {
         root = null;
         size = 0;
     }
 
-    /** Dodaje nowy element do kopca. */
+    public void printEntireHeap() {
+        if (root == null) {
+            System.out.println("Heap is empty");
+            return;
+        }
+        printNode(root, 0);
+    }
+
+    private void printNode(Node<T> node, int depth) {
+        if (node == null) return;
+        for (int i = 0; i < depth; i++) System.out.print("  ");
+        System.out.println(node.value);
+        if (depth < H) {
+            printNode(node.left, depth + 1);
+            printNode(node.right, depth + 1);
+        } else {
+            if (node.leftHeap != null) node.leftHeap.printEntireHeap();
+            if (node.rightHeap != null) node.rightHeap.printEntireHeap();
+        }
+    }
+
     public void add(T element) {
         if (element == null) throw new IllegalArgumentException("Null not allowed");
         size++;
         int idx = size;
         List<Boolean> bits = getPathBits(idx);
-        // 1) Wstawiamy do części wskaźnikowej, o ile głębokość ≤ H
         if (bits.size() <= H) {
             if (root == null) {
                 root = new Node<>(element);
@@ -45,12 +63,10 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
             }
             bubbleUpPointer(bits);
         } else {
-            // 2) Wstawiamy do jednej z tablic na poziomie H
             Node<T> parentH = findPointerNode(bits, H);
             boolean toRight = bits.get(H);
             ArrayHeap<T> arr = toRight ? parentH.rightHeap : parentH.leftHeap;
             arr.add(element);
-            // ewentualna wymiana z węzłem wskaźnikowym
             T childRoot = arr.peek();
             if (childRoot.compareTo(parentH.value) > 0) {
                 T tmp = parentH.value;
@@ -62,6 +78,39 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
         }
     }
 
+    private T removeLastElement() {
+        int lastIdx = size;
+        size--;
+        List<Boolean> bits = getPathBits(lastIdx);
+        T replacement;
+
+        if (bits.size() <= H) {
+            if (bits.isEmpty()) {
+                replacement = root.value;
+                root = null;
+                return replacement;
+            }
+            List<Boolean> parentBits = bits.subList(0, bits.size() - 1);
+            Node<T> parent = findPointerNode(parentBits, parentBits.size());
+            boolean isRight = bits.getLast();
+            Node<T> child;
+            if (isRight) {
+                child = parent.right;
+                parent.right = null;
+            } else {
+                child = parent.left;
+                parent.left = null;
+            }
+            replacement = child.value;
+        } else {
+            Node<T> parentH = findPointerNode(bits, H);
+            boolean toRight = bits.get(H);
+            ArrayHeap<T> arr = toRight ? parentH.rightHeap : parentH.leftHeap;
+            replacement = arr.removeLast();
+        }
+        return replacement;
+    }
+
     public T maximum() {
         if (size == 0) throw new IllegalStateException("Heap is empty");
         T maxVal = root.value;
@@ -69,34 +118,14 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
             clear();
             return maxVal;
         }
-        int oldSize = size;
-        size--;
-        List<Boolean> bits = getPathBits(oldSize);
-        T replacement;
-        if (bits.size() <= H) {
-            // usuwamy ostatni węzeł wskaźnikowy
-            List<Boolean> parentBits = bits.subList(0, bits.size() - 1);
-            Node<T> parent = findPointerNode(parentBits, parentBits.size());
-            boolean isRight = bits.get(bits.size() - 1);
-            Node<T> child = isRight ? parent.right : parent.left;
-            replacement = child.value;
-            if (isRight) parent.right = null;
-            else parent.left = null;
-        } else {
-            // usuwamy ostatni element z odpowiedniej tablicy
-            Node<T> parentH = findPointerNode(bits, H);
-            boolean toRight = bits.get(H);
-            ArrayHeap<T> arr = toRight ? parentH.rightHeap : parentH.leftHeap;
-            replacement = arr.removeLast();
-        }
-        root.value = replacement;
+
+        root.value = removeLastElement();
         heapifyDownPointer(root, 0);
         return maxVal;
     }
 
     // ----- metody pomocnicze dla części wskaźnikowej -----
 
-    /** Buduje ścieżkę (lista true=right, false=left) z indeksu w "heap-array". */
     private List<Boolean> getPathBits(int idx) {
         char[] c = Integer.toBinaryString(idx).toCharArray();
         List<Boolean> bits = new ArrayList<>(c.length - 1);
@@ -104,10 +133,8 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
         return bits;
     }
 
-    /** Wstawia nowy węzeł wskaźnikowy w określoną pozycję (głębokość ≤ H). */
     private Node<T> insertPointerNode(T element, List<Boolean> bits) {
         Node<T> cur = root;
-        // tworzymy po drodze ewentualnie braku­jące węzły
         for (int i = 0; i < bits.size() - 1; i++) {
             boolean toRight = bits.get(i);
             if (!toRight) {
@@ -118,14 +145,13 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
                 cur = cur.right;
             }
         }
-        boolean toRight = bits.get(bits.size() - 1);
+        boolean toRight = bits.getLast();
         Node<T> newNode = new Node<>(element);
         if (!toRight) cur.left = newNode;
         else cur.right = newNode;
         return newNode;
     }
 
-    /** "Bąbelkuje" nowy węzeł w górę drzewa wskaźnikowego. */
     private void bubbleUpPointer(List<Boolean> bits) {
         if (root == null || bits.isEmpty()) return;
         List<Node<T>> path = new ArrayList<>(bits.size() + 1);
@@ -148,10 +174,6 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
         }
     }
 
-    /**
-     * Znajduje węzeł wskaźnikowy na głębokości 'length'
-     * wg pierwszych 'length' kroków z listy bits.
-     */
     private Node<T> findPointerNode(List<Boolean> bits, int length) {
         Node<T> cur = root;
         for (int i = 0; i < length; i++) {
@@ -161,7 +183,6 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
         return cur;
     }
 
-    /** Odnajduje i naprawia własność kopca od danego węzła w dół. */
     private void heapifyDownPointer(Node<T> node, int depth) {
         if (node == null) return;
         if (depth < H) {
@@ -175,11 +196,9 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
                 heapifyDownPointer(largest, depth + 1);
             }
         } else {
-            // depth == H: dzieci są w tablicach
             ArrayHeap<T> La = node.leftHeap, Ra = node.rightHeap;
             T lv = (La.size() > 0 ? La.peek() : null);
             T rv = (Ra.size() > 0 ? Ra.peek() : null);
-            // wybieramy większe z lv,rv
             if (lv != null
                     && (rv == null || lv.compareTo(rv) >= 0)
                     && lv.compareTo(node.value) > 0) {
@@ -192,6 +211,108 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
                 node.value = rv;
                 Ra.set(1, tmp);
                 Ra.shiftDown(1);
+            }
+        }
+    }
+
+    private int[] findElement(T element) {
+        return findElementRecursive(root, 1, 0, element);
+    }
+
+    private int[] findElementRecursive(Node<T> node, int index, int depth, T element) {
+        if (node == null) return null;
+
+        if (node.value.equals(element)) {
+            return new int[] { index, -1 };
+        }
+
+        if (element.compareTo(node.value) > 0) {
+            return null;
+        }
+
+        if (depth < H) {
+            int[] found = findElementRecursive(node.left, index * 2, depth + 1, element);
+            if (found != null) return found;
+            return findElementRecursive(node.right, index * 2 + 1, depth + 1, element);
+        } else {
+            if (node.leftHeap != null) {
+                int arrayIndex = node.leftHeap.findIndex(element);
+                if (arrayIndex != -1) {
+                    List<Boolean> path = new ArrayList<>(getPathBits(index));
+                    path.add(false);
+                    path.addAll(getPathBits(arrayIndex));
+                    int globalIndex = 1;
+                    for (boolean bit : path) {
+                        globalIndex = (globalIndex << 1) | (bit ? 1 : 0);
+                    }
+                    return new int[] { globalIndex, arrayIndex };
+                }
+            }
+            if (node.rightHeap != null) {
+                int arrayIndex = node.rightHeap.findIndex(element);
+                if (arrayIndex != -1) {
+                    List<Boolean> path = new ArrayList<>(getPathBits(index));
+                    path.add(true);
+                    path.addAll(getPathBits(arrayIndex));
+                    int globalIndex = 1;
+                    for (boolean bit : path) {
+                        globalIndex = (globalIndex << 1) | (bit ? 1 : 0);
+                    }
+                    return new int[] { globalIndex, arrayIndex };
+                }
+            }
+            return null;
+        }
+    }
+
+    public void remove(T element) {
+        if (element == null || root == null) return;
+
+        int[] location = findElement(element);
+        if (location == null) return;
+
+        int index = location[0];
+        int arrayIndex = location[1];
+
+        if (index == size) {
+            removeLastElement();
+            return;
+        }
+
+        T replacement = removeLastElement();
+
+        if (arrayIndex == -1) {
+            List<Boolean> bits = getPathBits(index);
+            Node<T> nodeToReplace = findPointerNode(bits, bits.size());
+            T oldValue = nodeToReplace.value;
+            nodeToReplace.value = replacement;
+
+            if (replacement.compareTo(oldValue) > 0) {
+                bubbleUpPointer(bits);
+            } else {
+                heapifyDownPointer(nodeToReplace, bits.size());
+            }
+        } else {
+            List<Boolean> bitsToParent = getPathBits(index).subList(0, H);
+            Node<T> parentH = findPointerNode(bitsToParent, H);
+            boolean toRight = getPathBits(index).get(H);
+            ArrayHeap<T> heap = toRight ? parentH.rightHeap : parentH.leftHeap;
+
+            T oldValue = heap.setAndGet(arrayIndex, replacement);
+
+            if (replacement.compareTo(oldValue) > 0) {
+                heap.shiftUp(arrayIndex);
+            } else {
+                heap.shiftDown(arrayIndex);
+            }
+
+            T childRoot = heap.peek();
+            if (childRoot != null && childRoot.compareTo(parentH.value) > 0) {
+                T tmp = parentH.value;
+                parentH.value = childRoot;
+                heap.set(1, tmp);
+                heap.shiftDown(1);
+                bubbleUpPointer(bitsToParent);
             }
         }
     }
@@ -211,8 +332,6 @@ public class TreeArrayBinaryHeap<T extends Comparable<? super T>> {
     }
 }
 
-/** Prosty pomocnik: tablicowy kopiec maksymalny z operacjami add, peek,
- * removeLast, siftUp, siftDown. */
 class ArrayHeap<T extends Comparable<? super T>> {
     private static final int DEFAULT_CAP = 8;
     private Object[] data;
@@ -245,7 +364,6 @@ class ArrayHeap<T extends Comparable<? super T>> {
         return v;
     }
 
-    /** Zastępuje wartość na pozycji i (1-based). */
     public void set(int i, T elem) {
         if (i < 1 || i > size) throw new IndexOutOfBoundsException();
         data[i] = elem;
@@ -298,5 +416,33 @@ class ArrayHeap<T extends Comparable<? super T>> {
             int newCap = Math.max(data.length << 1, minCap);
             data = Arrays.copyOf(data, newCap);
         }
+    }
+
+    public void printEntireHeap() {
+        if (size == 0) {
+            System.out.println("Heap is empty");
+            return;
+        }
+        for (int i = 1; i <= size; i++) {
+            System.out.print(data[i] + " ");
+        }
+        System.out.println();
+    }
+
+    public int findIndex(T elem) {
+        for (int i = 1; i <= size; i++) {
+            if (data[i].equals(elem)) {
+                return i;
+            }
+        }
+        return -1;
+    }
+
+    @SuppressWarnings("unchecked")
+    public T setAndGet(int i, T elem) {
+        if (i < 1 || i > size) throw new IndexOutOfBoundsException();
+        T oldValue = (T) data[i];
+        data[i] = elem;
+        return oldValue;
     }
 }
